--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,6 +2,9 @@ name: Update gist with WakaTime stats
 on:
   schedule:
     - cron: "0 0 * * *"
+    push:
+      branches: 
+        - master
 jobs:
   update-gist:
     runs-on: ubuntu-latest
@@ -11,5 +14,5 @@ jobs:
         uses: matchai/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 968220c97e8da1d047a9a480fa432e54
+          GIST_ID: 64c5d18c4bc37fa40dd506bc2385e97c
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
