--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,9 +2,9 @@ name: Update gist with WakaTime stats
 on:
   schedule:
     - cron: "0 0 * * *"
-    push:
-      branches: 
-        - master
+  push:
+    branches: 
+      - master
 jobs:
   update-gist:
     runs-on: ubuntu-latest
@@ -16,3 +16,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 64c5d18c4bc37fa40dd506bc2385e97c
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          SHOW_LANGUAGE : True
+          SHOW_OS : True
+          SHOW_EDITORS : True
