--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,10 +1,16 @@
 name: Update gist with WakaTime stats
 on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  pull:
+    branches:
+      - master
   schedule:
     - cron: "*/1 * * * *"
-  push:
-    branches: 
-      - master
 jobs:
   update-gist:
     runs-on: ubuntu-latest
