--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,15 +1,10 @@
 name: Update gist with WakaTime stats
-
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
   schedule:
-    - cron: "*/1 * * * *"
-
+    - cron: "0 0 * * *"
+  push:
+    branches: 
+      - master
 jobs:
   update-gist:
     runs-on: ubuntu-latest
@@ -19,7 +14,7 @@ jobs:
         uses: matchai/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 64c5d18c4bc37fa40dd506bc2385e97c
+          GIST_ID: 1dede19cb6219c84e800f4901156f178
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_LANGUAGE : True
           SHOW_OS : True
