--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-GIST_ID=
-GH_TOKEN=
-WAKATIME_API_KEY=
+GIST_ID="64c5d18c4bc37fa40dd506bc2385e97c"
+GH_TOKEN="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"
+WAKATIME_API_KEY="5cffd043-b67d-48ef-b2b8-87b8054fbb25"
