--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime stats
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "* */30 * * *"
   push:
     branches:
       - master
