--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/checkout@master
       - name: Update gist
         uses: wangrongding/waka-box@master
+        
+      - name: Keepalive Workflow
+        uses: gautamkrishnar/keepalive-workflow@1.0.9
 
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
