--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,7 +14,7 @@ jobs:
         uses: wangrongding/waka-box@master
         
       - name: Keepalive Workflow
-        uses: gautamkrishnar/keepalive-workflow@1.0.9
+        uses: gautamkrishnar/keepalive-workflow@v1
 
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
