--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime stats
 on:
   schedule:
-    - cron: "* */30 * * *"
+    - cron: "0 0 * * SAT,SUN" # 每周一，周六触发，也可以 0 0 * * 1,6
   push:
     branches:
       - master
@@ -16,6 +16,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: dde0a407006d7fdd5fb0345cd2fc1a6c
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          
+
       - name: Keepalive Workflow
         uses: gautamkrishnar/keepalive-workflow@1.0.9
