--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,6 +1,6 @@
 name: Update gist with WakaTime stats
 on:
-  schedule:
+  # schedule:
     # - cron: "0 0 * * SAT,SUN" # 每周一，周六触发，也可以 0 0 * * 1,6
   push:
     branches:
